# aziky

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  SECURITY.md  SUPPORT.md
.github/: dependabot.yml  pull_request_template.md
bench/: README.md  affine_mix.azk  affine_mix.c  affine_mix.rs  allocator_stress.rs  binary_search.azk  binary_search.c  binary_search.rs  bloom_filter.azk  bloom_filter.c  bloom_filter.rs  hash_join.azk  hash_join.c  hash_join.rs  histogram.azk  histogram.c  histogram.rs  packet_classifier.azk  packet_classifier.c  packet_classifier.rs  prefix_scan.azk  prefix_scan.c  prefix_scan.rs  ring_write.azk  ring_write.c  ring_write.rs  sort_window.azk  sort_window.c  sort_window.rs  stream_lcg.azk  stream_lcg.c  stream_lcg.rs
docs/: ARCHITECTURE.md  AZIKY_ARTIFACTS_AND_DEBUG.md  AZIKY_DEVELOPER_COMMANDS.md  AZIKY_EDITOR_TOOLING.md  AZIKY_LANGUAGE_REFERENCE.md  AZIKY_PACKAGES.md  AZIKY_TARGETS.md  README.md  RELEASE_STATUS.md  RELEASING.md  STANDARD_LIBRARY_ROADMAP.md  owned-data-runtime-abi.md
examples/: hello.azk  owned_u64_list.azk
research/: README.md  avx-simd.md  gcc-peephole-optimizations.md  macro-fusion.md  simd.md  superoptimization.md
scripts/: README.md  check_allocator_stress_gate.sh  check_benchmark_contracts.py  check_determinism.sh  check_markdown_links.py  check_repository_hygiene.sh  check_reproducible_build.sh  check_sort_bench_gate.sh  collect_profile.sh  compare_aziky_rust_bench.sh  (+14 more)
(+123 files in other folders)
